<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_label"
            android:textSize="24sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/tvValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_exemplo"
            android:textSize="20sp"
            android:textColor="#333333"/>

        <TextView
            android:id="@+id/tvData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_exemplo"
            android:textSize="20sp"
            android:textColor="#666666"/>
    </LinearLayout>

    <!-- Botão Editar -->
    <ImageButton
        android:id="@+id/btnEditDespesa"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_add_edit"
        android:contentDescription="@string/editar_despesa"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp" />

    <!-- Botão Deletar -->
    <ImageButton
        android:id="@+id/btnDeleteDespesa"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_add_delete"
        android:contentDescription="@string/deletar_despesa"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp" />
</LinearLayout>
