<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descricao_label"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvValor"
        app:layout_constraintBottom_toTopOf="@id/tvData"
        android:ellipsize="end"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_exemplo"
        android:textSize="20sp"
        android:textColor="@color/green_500"
        app:layout_constraintEnd_toStartOf="@id/btnDeleteReceita"
        app:layout_constraintBaseline_toBaselineOf="@id/tvDescricao" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data_exemplo"
        android:textSize="20sp"
        android:textColor="@color/gray_medium"
        app:layout_constraintStart_toStartOf="@id/tvDescricao"
        app:layout_constraintTop_toBottomOf="@id/tvDescricao"
        app:layout_constraintEnd_toStartOf="@id/btnDeleteReceita"
        android:ellipsize="end"
        android:maxLines="1" />

    <ImageButton
        android:id="@+id/btnDeleteReceita"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/deletar_receita"
        android:src="@android:drawable/ic_menu_delete"
        app:tint="@color/black"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
